openapi ext - merging schema from different providers
